--- a/mini-veterinaria/index.html
+++ b/mini-veterinaria/index.html
@@ -4,41 +4,65 @@
     <meta charset="UTH-16">
     <title>Veterinaria</title>
     <link rel="stylesheet" href="index.css">
+    <!--CARGAR BOOSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!--ENCABEZADO DE LA PAGINA-->
     <header>
-        <h2>Registro de mascotas</h2>
+        <!--Barra de navegación-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Grupo 24</a>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <!--Opciones de navegación-->
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Registrar mascota</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
-    <main>
-        <form>
+    <main id= section-form>
+        <form  class="mb-3">
             <!--Nombre mascota-->
-            <label for= "NombreMascota">Nombre mascota: </label>
-            <input id= "nombreMascota" type="text"/>
+            <label for= "NombreMascota" class="form-label">Nombre mascota: </label>
+            <input class="form-control" id= "nombreMascota" type="text"/>
             <br/>
             <!--Apellido propietario-->
-            <label for="ApellidoPropietario">Apellido propietario</label>
-            <input id=apellidoPropietario type="text"/>
+            <label for="ApellidoPropietario" class="form-label">Apellido propietario</label>
+            <input class="form-control" id=apellidoPropietario type="text"/>
             <br/>
             <!--Tipo mascota-->
-            <label for="tipoMascota">Tipo mascota</label>
-            <input id=tipoMascota type="text">
+            <label for="tipoMascota" class="form-label">Tipo mascota</label>
+            <input class="form-control" id=tipoMascota type="text">
             <br/>
             <!--Raza-->
-            <label for="raza">Raza</label>
-            <input id=raza type="text">
+            <label for="raza" class="form-label">Raza</label>
+            <input class="form-control" id=raza type="text">
             <br/>
             <!--Edad-->
-            <label for="edad">Edad mascota</label>
-            <input id= edad type="number">
+            <label for="edad" class="form-label">Edad mascota</label>
+            <input class="form-control" id= edad type="number">
             <br/>
             <!--Observacion-->
-            <label for="observacion">Observacion: </label>
+            <label class="form-control" for="observacion" class="form-label">Observacion: </label>
             <br/>
-            <textarea id="observacion" rows="10" cols="50"></textarea>
+            <textarea class="form-control" id="observacion" rows="10" cols="50" class="form-label"></textarea>
             <br/>
             <!--Boton-->
-            <button type="submit">Registrar</button>
-
+            <div id="cont-btn">
+                <button class="btn btn-outline-primary"  type="submit">Registrar</button>
+            </div>
+            
         </form>
 
     </main>
